Fix header spacing issues

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -201,6 +201,7 @@ header
     padding: 0
 
     li
+      flex-shrink: 0
       margin-left: $marginSize
 
       @media screen and (max-width: $breakpoint-small)
